--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Raleway";
-  src: url(./_assets/fonts/Raleway-VariableFont_wght.ttf) format("truetype");
+  font-family: "Jost";
+  src: url(./_assets/fonts/Jost-VariableFont_wght.ttf) format("truetype");
   /* Add additional font formats (e.g., woff, woff2) as needed */
 }
 * {
