--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,30 +8,8 @@
   padding: 0;
   margin: 0;
 }
-
-html,
 body {
-  max-width: 100vw;
+  margin: 0 auto;
+  max-width: 1440px;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
